Invisible errors reporting bug fixed

--- a/public/stylesheets/layout_stylesheet.css
+++ b/public/stylesheets/layout_stylesheet.css
@@ -32,6 +32,11 @@ body{
 	height: 25px;
 	background-color: #000;
 }
+
+#top-bar p{
+  color: #000;
+  
+}
 /*Contains everything below the top bar!*/
 #container{
  /* 474744 */
